[tool.poetry]
name = "marine-data-fetch"
version = "0.1.0"
description = ""
authors = ["Rahul T Gerorge <34202955+rahul-george@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
